# slint-cluster-demo

./: Cargo.toml  build.rs
src/: main.rs
ui/: CircularGauge.slint  ImageButton.slint  IndicatorFrame.slint  TurnIndicator.slint  app-window-1024x600.slint  app-window-1280x400.slint  app-window-1280x480.slint  app-window-1920x1080.slint
ui/images/: images.qrc
